Testes iniciais do ADM e Visitor completados

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
-<h1>ola</h1>
+<h1>Rental Cars</h1>
+<h2>Bem vindo ao sistema de gestão de locação</h2>
+
+<%= link_to 'Fabricantes', manufacturers_path%>
