--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -1,8 +1,11 @@
 
+
+<h1>Fabricantes</h1>
+
 <%= link_to 'Registrar novo fabricante', new_manufacturer_path %>
 
 <% if @manufacturers.empty? %>
-   <%= 'Nenhum fabricante cadastrado' %>
+	<%= 'Nenhum fabricante cadastrado' %>
 <% end %>
 
 <% @manufacturers.each do |manu| %>
