--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,6 +1,11 @@
-<%= form_for @manufacturers do |f| %>
-  <%= f.label :name, 'Nome' %>
-  <%= f.text_field :name %>
+<h1>Registre um novo fabricante:</h1>
 
-  <%= f.submit 'Enviar'%>
+<% @manufacturer.errors.full_messages.each do |message| %>
+	<p><%= message %></p>
+<% end %>
+
+<%= form_with model: @manufacturer, local: true do |f| %>
+	<%= f.label :name, 'Nome' %>
+	<%= f.text_field :name %>
+	<%= f.submit 'Enviar'%>
 <% end %>
