--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -2,5 +2,6 @@
 
 <%= link_to 'Voltar', manufacturers_path %>
 <%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%>
+<%= link_to 'Apagar', manufacturer_path(id: @manufacturer.id), method: :delete %>
 
 
