--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
 <h2>Bem vindo ao sistema de gestão de locação</h2>
 
 <%= link_to 'Fabricantes', manufacturers_path%>
-<%= link_to 'Categoria de Carros', car_categories_path%>
+<%= link_to 'Categorias de Carros', car_categories_path%>
