--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,4 @@
 
 <%= link_to 'Fabricantes', manufacturers_path%>
 <%= link_to 'Categorias de Carros', car_categories_path%>
+<%= link_to 'Modelo de Carros', car_models_path%>
