--- a/app/views/car_categories/index.html.erb
+++ b/app/views/car_categories/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Categorias de Carros</h1>
 
+<%= link_to 'Voltar', root_path%>
+
 <%= link_to 'Registrar nova Categoria', new_car_category_path %>
 
 <% if @car_categories.empty? %>
