Registro de locations e modelos, i18n pendente para rodar os testes, validacao cnpj e document pendentes

--- a/app/views/car_categories/index.html.erb
+++ b/app/views/car_categories/index.html.erb
@@ -8,7 +8,7 @@
 	<%= 'Nenhuma categoria cadastrada' %>
 <% end %>
 
-<%= @car_categories.each do |c| %>
+<% @car_categories.each do |c| %>
 	<div>
 		<h2><%= link_to "Categoria #{c.name}", c %></h2>
 		
