--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,6 @@
 
 <%= link_to 'Fabricantes', manufacturers_path%>
 <%= link_to 'Categorias de Carros', car_categories_path%>
-<%= link_to 'Modelo de Carros', car_models_path%>
+<%= link_to 'Modelos de Carros', car_models_path%>
 <%= link_to 'Cadastrar Cliente', new_customer_path%>
+<%= link_to 'Locações', rentals_path%>
