--- a/app/views/manufacturers/edit.html.erb
+++ b/app/views/manufacturers/edit.html.erb
@@ -4,7 +4,7 @@
 
 
 <%= form_with(model: @manufacturer) do |f| %>
-	<%= f.label :name, 'Nome' %>
+	<%= f.label :name %>
 	<%= f.text_field :name %>
 	<%= f.submit 'Enviar'%>
 <% end %>
