--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <%= form_with model: @manufacturer, local: true do |f| %>
-	<%= f.label :name, 'Nome' %>
+	<%= f.label :name %>
 	<%= f.text_field :name %>
 	<%= f.submit 'Enviar'%>
 <% end %>
