Melhorando navagacao: botao de voltar em todas as paginas

--- a/app/views/car_categories/new.html.erb
+++ b/app/views/car_categories/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Registre uma nova categoria:</h1>
 
+<%= link_to 'Voltar', car_categories_path %>
+
 <% @car_category.errors.full_messages.each do |message| %>
 	<p><%= message %></p>
 <% end %>
