--- a/app/views/car_models/index.html.erb
+++ b/app/views/car_models/index.html.erb
@@ -2,6 +2,7 @@
 <h1>Modelo de Carros</h1>
 
 <%= link_to 'Registrar novo modelo de carro', new_car_model_path %>
+<%= link_to 'Voltar', root_path %>
 <table>
 	<head>
 		<tr>
