--- a/app/views/car_models/new.html.erb
+++ b/app/views/car_models/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Novo modelo</h1>
+<%= link_to 'Voltar', car_models_path %>
 
 <% @car_model.errors.full_messages.each do |message| %>
 	<p><%= message %></p>
