Teste e implementacao para deletar cartegorias de carros

--- a/app/views/car_categories/show.html.erb
+++ b/app/views/car_categories/show.html.erb
@@ -17,6 +17,9 @@
 			<dt>Editar categoria</dt>
 			<dd><%= link_to 'Editar', edit_car_category_path(@car_category) %></dd>
 
+			<dt>Apagar categoria</dt>
+			<dd><%= link_to 'Apagar', car_category_path(id: @car_category.id), method: :delete %></dd>
+
 		</dl>
 		
 		<% if @car_category.car_models.any? %>
