Teste e implementacao para editar modelos de carros

--- a/app/views/car_models/show.html.erb
+++ b/app/views/car_models/show.html.erb
@@ -21,5 +21,8 @@
 		<dt>Diária: </dt>
 		<dd><%= number_to_currency @car_model.car_category.daily_rate %></dd>
 
+		<dt>Editar modelo</dt>
+		<dd><%= link_to 'Editar', edit_car_model_path(@car_model) %></dd>
+
 	</dl>
 </section>
