--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,5 +6,6 @@
 <%= link_to 'Modelos de Carros', car_models_path%>
 <%= link_to 'Cadastrar Cliente', new_customer_path%>
 <%= link_to 'Locações', rentals_path%>
+<%= link_to 'Filiais', subsidiaries_path%>
 
 
