Teste concluido: Ver lista de placas e mais detalhes de Cars

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,5 +7,6 @@
 <%= link_to 'Cadastrar Cliente', new_customer_path%>
 <%= link_to 'Locações', rentals_path%>
 <%= link_to 'Filiais', subsidiaries_path%>
+<%= link_to 'Carros das Frotas', cars_path%>
 
 
