--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Carros Cadastrados</h1>
 
 <%= link_to 'Voltar', root_path %>
+<%= link_to 'Registrar novo carro para a frota', new_car_path%>
 
 <% if @cars.empty? %>
 	<%= 'Nenhum carro cadastrado' %>
