--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,16 @@
-<h1>Rental Cars</h1>
-<h2>Bem vindo ao sistema de gestão de locação</h2>
-
-<%= link_to 'Fabricantes', manufacturers_path%>
-<%= link_to 'Categorias de Carros', car_categories_path%>
-<%= link_to 'Modelos de Carros', car_models_path%>
-<%= link_to 'Cadastrar Cliente', new_customer_path%>
-<%= link_to 'Locações', rentals_path%>
-<%= link_to 'Filiais', subsidiaries_path%>
-<%= link_to 'Carros das Frotas', cars_path%>
+<div class="home-page">
+	<h1>Rental Cars</h1>
+	<h2>Bem vindo ao sistema de gestão de locação</h2>
+	
+	<div class="links">
+		<li><%= link_to 'Fabricantes', manufacturers_path%></li>
+		<li><%= link_to 'Categorias de Carros', car_categories_path%></li>
+		<li><%= link_to 'Modelos de Carros', car_models_path%></li>
+		<li><%= link_to 'Cadastrar Cliente', new_customer_path%></li>
+		<li><%= link_to 'Locações', rentals_path%></li>
+		<li><%= link_to 'Filiais', subsidiaries_path%></li>
+		<li><%= link_to 'Carros das Frotas', cars_path%></li>
+	</div>
+</div>
 
 
