Resolvendo parcialmenteos testes de autenticacao

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,17 @@
 		<% if user_signed_in? %>
 			<li><%= link_to 'Sair', destroy_user_session_path, method: :delete%></li>
 			<li><%= link_to 'Locações', rentals_path%></li>
+			
 	 	<% else %>
 			<li><%= link_to 'Entrar', new_user_session_path%></li>
 		<% end %>   
 	</nav>
     <%= flash[:notice] %>
+
+ <% if flash[:alert] %>
+        <%= flash[:alert] %>
+      <% end %>
+
     <%= yield %>
   </body>
 </html>
