--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 		<% if user_signed_in? %>
 			<li><%= link_to 'Sair', destroy_user_session_path, method: :delete%></li>
 			<li><%= link_to 'Locações', rentals_path%></li>
-			
+			<li><%= link_to 'Cadastrar Cliente', new_customer_path%></li>
 	 	<% else %>
 			<li><%= link_to 'Entrar', new_user_session_path%></li>
 		<% end %>   
