--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 			<li><%= link_to 'Locações', rentals_path%></li>
 			<li><%= link_to 'Cadastrar Cliente', new_customer_path%></li>
 			<li><%= link_to 'Modelos de Carros', car_models_path%></li>
+			<li><%= link_to 'Categorias de Carros', car_categories_path%></li>
 	 	<% else %>
 			<li><%= link_to 'Entrar', new_user_session_path%></li>
 		<% end %>   
