--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 			<li><%= link_to 'Modelos de Carros', car_models_path%></li>
 			<li><%= link_to 'Categorias de Carros', car_categories_path%></li>
 			<li><%= link_to 'Fabricantes', manufacturers_path%></li>
+			<li><%= link_to 'Filiais', subsidiaries_path%></li>
 	 	<% else %>
 			<li><%= link_to 'Entrar', new_user_session_path%></li>
 		<% end %>   
