Teste e implementacao para vieew de custumers

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,11 +1,17 @@
 <h1>Clientes</h1>
 
+<%= link_to 'Voltar', root_path %>
+
 <li><%= link_to 'Cadastrar Cliente', new_customer_path%></li>
 
 <%= form_with url: search_customers_path, method: :get do |f| %>
   <%= f.label :q, 'Busca' %>
   <%= f.search_field :q %>
   <%= f.submit 'Buscar' %>
+<% end %>
+
+<% if @customers.empty? %>
+	<%= 'Nenhum cliente cadastrado' %>
 <% end %>
 
 <table>
