--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -4,6 +4,10 @@
 
 <%= link_to 'Voltar', root_path %>
 
+<% if @rentals.empty? %>
+	<%= 'Nenhuma locação registrada' %>
+<% end %>
+
 <%= form_with url: search_rentals_path, method: :get do |f| %>
 	<%= f.label :q, 'Código' %>
 	<%= f.text_field :q%>
