--- a/app/views/car_categories/show.html.erb
+++ b/app/views/car_categories/show.html.erb
@@ -1,35 +1,36 @@
 
-	<div>
-		<%= link_to 'Voltar', car_categories_path %>
-		
-		<h2>Categoria <%= @car_category.name %></h2>
-		
-		<dl>
-			<dt>Diaria:</dt>
-			<dd><%= number_to_currency @car_category.daily_rate %></dd>
+<%= link_to 'Voltar', car_categories_path %>
 
-			<dt>Seguro do Carro:</dt>
-			<dd><%= number_to_currency @car_category.car_insurance %></dd>
+<table>
+	<thead>
+		<tr>
+			<th>Categoria</th>
+			<th>Diaria</th>
+			<th>Seguro do Carro</th>
+			<th>Seguro para Terceiros</th>
+			<th></th>
+			<th></th>
+			</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><%= "#{@car_category.name}" %></td>
+			<td><%= number_to_currency @car_category.daily_rate %></td>
+			<td><%= number_to_currency @car_category.car_insurance %></td>
+			<td><%= number_to_currency @car_category.third_part_insurance %></td>
+			<td><%= link_to 'Editar', edit_car_category_path(@car_category) %></td>
+			<td><%= link_to 'Apagar', car_category_path(id: @car_category.id), method: :delete %></td>
+		</tr>
+	</tbody>
+</table>
+	
+<% if @car_category.car_models.any? %>
+	<h3>Modelos de Carros</h3>
+	<% @car_category.car_models.each do |car_model|%>
+		<li><%= link_to car_model.name, car_model%></li>		
+	<% end %>
+<% else %>
+	<%= 'Sem modelos cadastrados' %>	
+<% end %>
 
-			<dt>Seguro para Terceiros:</dt>
-			<dd><%= number_to_currency @car_category.third_part_insurance %></dd>
-			
-			<dt>Editar categoria</dt>
-			<dd><%= link_to 'Editar', edit_car_category_path(@car_category) %></dd>
-
-			<dt>Apagar categoria</dt>
-			<dd><%= link_to 'Apagar', car_category_path(id: @car_category.id), method: :delete %></dd>
-
-		</dl>
-		
-		<% if @car_category.car_models.any? %>
-			<h3>Modelos de Carros</h3>
-			<% @car_category.car_models.each do |car_model|%>
-				<%= link_to car_model.name, car_model%>		
-			<% end %>
-		<% else %>
-			<%= 'Sem modelos cadastrados' %>	
-		<% end %>
-		
-	</div>
 
