--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -15,24 +15,26 @@
 <% end %>
 
 <% if @rentals.any? %>
-	<% @rentals.each do |rental| %>
-		<dl>
-
-			<dt>Código:</dt>
-			<dd><%= rental.code %></dd>
-	
-			<dt>Data de inicio:</dt>
-			<dd><%= rental.start_date && localize(rental.start_date) %></dd>
-
-			<dt>Data de término:</dt>
-			<dd><%= rental.end_date && localize(rental.end_date) %></dd>
-
-			<dt>Cliente:</dt>
-			<dd><%= rental.customer.name %></dd>
-
-			<dt>Categoria:</dt>
-			<dd><%= rental.car_category.name %></dd>
-		</dl>
-
-	<% end %>
+		<table>
+			<head>
+				<tr>
+					<th>Código</th>
+					<th>Data de inicio</th>
+					<th>Data de término</th>
+					<th>Cliente</th>
+					<th>Categoria</th>
+				</tr>
+			</head>
+			<tbody>
+				<% @rentals.each do |rental| %>
+				<tr>
+					<td><%= rental.code %></td>
+					<td><%= rental.customer.name %></td>
+					<td><%= rental.car_category.name %></td>
+					<td><%= rental.start_date && localize(rental.start_date) %></td>
+					<td><%= rental.end_date && localize(rental.end_date) %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
 <% end %>
