--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -14,25 +14,27 @@
 	<%= 'Nenhum cliente cadastrado' %>
 <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>Email</th>
-      <th>Documento</th>
-      <th>Alterar informações</th>
-      <th>Excluir cliente</th>
-     </tr>
-  </thead>
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr id="customer-<%= customer.id %>">
-        <td><%= customer.name %></td>
-        <td><%= customer.email %></td>
-        <td><%= customer.document %></td>
-	<td><%= link_to 'Editar', edit_customer_path(customer), id: "edit-#{customer.id}" %></td>
-	<td><%= link_to 'Excluir', customer_path(customer), method: :delete, id: "delete-#{customer.id}" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% if @customers.any? %>
+	<table>
+	  <thead>
+	    <tr>
+	      <th>Nome</th>
+	      <th>Email</th>
+	      <th>CPF</th>
+	      <th></th>
+	      <th></th>
+	     </tr>
+	  </thead>
+	  <tbody>
+	    <% @customers.each do |customer| %>
+	      <tr id="customer-<%= customer.id %>">
+		<td><%= customer.name %></td>
+		<td><%= customer.email %></td>
+		<td><%= customer.document %></td>
+		<td><%= link_to 'Editar', edit_customer_path(customer), id: "edit-#{customer.id}" %></td>
+		<td><%= link_to 'Excluir', customer_path(customer), method: :delete, id: "delete-#{customer.id}" %></td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
+<% end %>
