--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -14,6 +14,10 @@
 	<%= f.submit 'Buscar' %>
 <% end %>
 
+<% if @rentals.empty? %>
+	<%= 'Nenhum cliente cadastrado' %>
+<% end %>
+
 <% if @rentals.any? %>
 		<table>
 			<head>
@@ -36,7 +40,7 @@
 					<td><%= rental.start_date && localize(rental.start_date) %></td>
 					<td><%= rental.end_date && localize(rental.end_date) %></td>
 					<td><%= link_to 'Editar', edit_rental_path(rental), id: "edit-#{rental.id}" %></td>
-					<td><%= link_to 'Excluir', rentals_path(rental), method: :delete, id: "delete-#{rental.id}" %></td>
+					<td><%= link_to 'Excluir', rental_path(rental), method: :delete, id: "delete-#{rental.id}" %></td>
 				</tr>
 				<% end %>
 			</tbody>
