Teste e implementacao para deletar filiais

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% if @customers.empty? %>
-	<%= 'Nenhuma locação registrada' %>
+	<%= 'Nenhum cliente cadastrado' %>
 <% end %>
 
 <% if @customers.any? %>
