--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -4,3 +4,4 @@
 
 <%= link_to 'Voltar', subsidiaries_path %>
 <%= link_to 'Editar', edit_subsidiary_path(@subsidiary)%>
+<%= link_to 'Apagar', subsidiary_path(@subsidiary), method: :delete %>
