--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
     	<nav>
 		<% if user_signed_in? %>
 			<li><%= link_to 'Sair', destroy_user_session_path, method: :delete%></li>
-			<li><%= link_to 'Locações', rentals_path%></li>
+			<li><%= link_to 'Home', root_path%></li>
 			<li><%= link_to 'Clientes', customers_path%></li>
+			<li><%= link_to 'Fabricantes', manufacturers_path%></li>
+			<li><%= link_to 'Locações', rentals_path%></li>
+			<li><%= link_to 'Filiais', subsidiaries_path%></li>
 			<li><%= link_to 'Modelos de Carros', car_models_path%></li>
 			<li><%= link_to 'Categorias de Carros', car_categories_path%></li>
-			<li><%= link_to 'Fabricantes', manufacturers_path%></li>
-			<li><%= link_to 'Filiais', subsidiaries_path%></li>
+			<li><%= link_to 'Carros das Frotas', cars_path%></li>
 
 	 	<% else %>
 			<li><%= link_to 'Entrar', new_user_session_path%></li>
