--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to 'Voltar', manufacturers_path %>
 <%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%>
-<%= link_to 'Apagar', manufacturer_path(@manufacturer), method: :delete %>
+<%= link_to 'Excluir', manufacturer_path(@manufacturer), method: :delete %>
