Implementando partials em todos os forms

--- a/app/views/manufacturers/edit.html.erb
+++ b/app/views/manufacturers/edit.html.erb
@@ -1,13 +1,5 @@
 <h1>Editar fabricante:</h1>
 
-<% @manufacturer.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
 <%= link_to 'Voltar', manufacturers_path %>
 
-<%= form_with(model: @manufacturer) do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-	<%= f.submit 'Enviar'%>
-<% end %>
+<%= render "form" %>
