--- a/app/views/car_models/edit.html.erb
+++ b/app/views/car_models/edit.html.erb
@@ -1,36 +1,4 @@
 <h1>Editar modelo</h1>
 <%= link_to 'Voltar', car_models_path %>
 
-<% @car_model.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
-<%= form_with model: @car_model, local: true do |f|%>
-	<div>
-		<strong><%= f.label :name %></strong>
-		<%= f.text_field :name %>
-	</div>
-	<div>
-		<strong><%= f.label :year %></strong>
-		<%= f.number_field :year %>
-	</div>
-	<div>
-		<strong><%= f.label :motorization %></strong>
-		<%= f.text_field :motorization %>
-	</div>
-	<div>
-		<strong><%= f.label :fuel_type %></strong>
-		<%= f.text_field :fuel_type %>
-	</div>
-	<div>
-		<strong><%= f.label :manufacturer_id %></strong>
-		<%= f.collection_select :manufacturer_id, @manufacturers, :id, :name %>
-	</div>
-	<div>
-		<strong><%= f.label :car_category_id %></strong>
-		<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
-	</div>
-	<div>
-		<%= f.submit 'Enviar'%>
-	</div>
-<% end %>
+<%= render "form" %>
