--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,19 +2,4 @@
 
 <%= link_to 'Voltar', customers_path %>
 
-<% @customer.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
-<%= form_with model: @customer, local: true do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-
-	<%= f.label :document %>
-	<%= f.text_field :document %>
-
-	<%= f.label :email %>
-	<%= f.text_field :email %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<%= render "form" %>
