--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -2,12 +2,4 @@
 
 <%= link_to 'Voltar', manufacturers_path %>
 
-<% @manufacturer.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
-<%= form_with model: @manufacturer, local: true do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-	<%= f.submit 'Enviar'%>
-<% end %>
+<%= render "form" %>
