--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -2,22 +2,4 @@
 
 <%= link_to 'Voltar', rentals_path %>
 
-<% @rental.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
-<%= form_with model: @rental, local: true do |f| %>
-	<%= f.label :start_date %>
-	<%= f.date_field :start_date %>
-
-	<%= f.label :end_date%>
-	<%= f.date_field :end_date %>
-
-	<%= f.label :customer_id %>
-	<%= f.collection_select :customer_id, @customers, :id, :name %>
-
-	<%= f.label :car_category_id %>
-	<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<%= render "form" %>
