--- a/app/views/subsidiaries/new.html.erb
+++ b/app/views/subsidiaries/new.html.erb
@@ -2,19 +2,4 @@
 
 <%= link_to 'Voltar', subsidiaries_path %>
 
-<% @subsidiary.errors.full_messages.each do |message| %>
-	<p><%= message %></p>
-<% end %>
-
-<%= form_with model: @subsidiary, local: true do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-
-	<%= f.label :cnpj %>
-	<%= f.text_field :cnpj %>
-
-	<%= f.label :address %>
-	<%= f.text_field :address %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<%= render "form" %>
