--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 * {
 	text-decoration: none;
 	font-family: 'Montserrat', sans-serif;
-	
+	margin: 0;
 	padding: 0;
 }
 
@@ -56,7 +56,7 @@ a {
 /*Logo*/
 .logo {
 	margin-top: -1%;
-	margin-left: 1%;
+	margin-left: 5%;
 }
 
 /*Entrar*/
@@ -99,7 +99,19 @@ a {
 /*Todos os elementos de home/index*/
 .home-page {
 	text-align: center;
+	background-color: #11c76f;
+	height: 100vh;
+	color: white;
 }
+
+.home-page h1 {
+	padding-top: 10%;
+	font-size: 50px;
+} 
+
+.home-page h2 {
+	font-size: 30px;
+} 	
 
 /*Desktop*/
 @media screen and (min-width: 1000px) {
@@ -114,11 +126,26 @@ a {
 	/*Menu de session - usuario nao logado*/
 	.menu {
 		display: block;
+		box-shadow: none;
+		padding: 5%;
+
+	}
+
+	/*Entrar*/
+	.li-entrar {
+		text-align: center;
+		margin-top: -5%;
+		margin-bottom: 5%;
 	}
 
 	.dropdown button {
 		width: 35%;
 		padding: 0%;
+	}
+
+	.home-page h1 {
+		padding-top: 40%;
+		margin-bottom: 5%;
 	}
 }
 
