--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -2,15 +2,20 @@
 	<p><%= message %></p>
 <% end %>
 
-<%= form_with model: @customer, local: true do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-
-	<%= f.label :document %>
-	<%= f.text_field :document %>
-
-	<%= f.label :email %>
-	<%= f.text_field :email %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<div class="form">
+	<%= form_with model: @customer, local: true do |f| %>
+		<div class="field">
+			<%= f.label :name %>
+			<%= f.text_field :name %>
+		</div>
+		<div class="field">
+			<%= f.label :document %>
+			<%= f.text_field :document %>
+		</div>
+		<div class="field">
+			<%= f.label :email %>
+			<%= f.text_field :email %>
+		</div>
+		<%= f.submit 'Enviar'%>
+	<% end %>
+</div>
