--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,40 +1,44 @@
-<h1>Clientes</h1>
+<h3 class="link-to-back"><%= link_to 'Voltar', root_path %></h3>
 
-<%= link_to 'Voltar', root_path %>
+<div class="customers-div">
+	<h1>Lista de Clientes</h1>
 
-<li><%= link_to 'Cadastrar Cliente', new_customer_path%></li>
+	<h3><%= link_to 'Cadastrar Cliente', new_customer_path%></li></h3>
+	
+	<div class="field-seach">
+		<%= form_with url: search_customers_path, method: :get do |f| %>
+		  <%= f.label :q, 'Busca' %>
+		  <%= f.search_field :q %>
+		  <button class="button-busca" type="submit">Buscar</button>
+		<% end %>
+	</div>
 
-<%= form_with url: search_customers_path, method: :get do |f| %>
-  <%= f.label :q, 'Busca' %>
-  <%= f.search_field :q %>
-  <%= f.submit 'Buscar' %>
-<% end %>
+	<% if @customers.empty? %>
+		<%= 'Nenhum cliente cadastrado' %>
+	<% end %>
 
-<% if @customers.empty? %>
-	<%= 'Nenhum cliente cadastrado' %>
-<% end %>
-
-<% if @customers.any? %>
-	<table>
-	  <thead>
-	    <tr>
-	      <th>Nome</th>
-	      <th>Email</th>
-	      <th>CPF</th>
-	      <th></th>
-	      <th></th>
-	     </tr>
-	  </thead>
-	  <tbody>
-	    <% @customers.each do |customer| %>
-	      <tr id="customer-<%= customer.id %>">
-		<td><%= customer.name %></td>
-		<td><%= customer.email %></td>
-		<td><%= customer.document %></td>
-		<td><%= link_to 'Editar', edit_customer_path(customer), id: "edit-#{customer.id}" %></td>
-		<td><%= link_to 'Excluir', customer_path(customer), method: :delete, id: "delete-#{customer.id}" %></td>
-	      </tr>
-	    <% end %>
-	  </tbody>
-	</table>
-<% end %>
+	<% if @customers.any? %>
+		<table>
+		  <thead>
+		    <tr>
+		      <th>Nome</th>
+		      <th>Email</th>
+		      <th>CPF</th>
+		      <th></th>
+		      <th></th>
+		     </tr>
+		  </thead>
+		  <tbody>
+		    <% @customers.each do |customer| %>
+		      <tr id="customer-<%= customer.id %>">
+			<td><%= customer.name %></td>
+			<td><%= customer.email %></td>
+			<td><%= customer.document %></td>
+			<td class="link-editar"><%= link_to 'Editar', edit_customer_path(customer), id: "edit-#{customer.id}" %></td>
+			<td class="link-excluir"><%= link_to 'Excluir', customer_path(customer), method: :delete, id: "delete-#{customer.id}" %></td>
+		      </tr>
+		    <% end %>
+		  </tbody>
+		</table>
+	<% end %>
+</div>
