--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Registre um novo cliente:</h1>
+<h3 class="link-to-back"><%= link_to 'Voltar', customers_path %></h3>
 
-<%= link_to 'Voltar', customers_path %>
+<div class="form-session">
+	<h1>Registre um novo cliente:</h1>
 
-<%= render "form" %>
+	<%= render "form" %>
+</div>
