--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -2,18 +2,24 @@
 	<p><%= message %></p>
 <% end %>
 
-<%= form_with model: @rental, local: true do |f| %>
-	<%= f.label :start_date %>
-	<%= f.date_field :start_date %>
-
-	<%= f.label :end_date%>
-	<%= f.date_field :end_date %>
-
-	<%= f.label :customer_id %>
-	<%= f.collection_select :customer_id, @customers, :id, :name %>
-
-	<%= f.label :car_category_id %>
-	<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
-
-	<%= f.submit 'Enviar'%>
-<% end %>
+<div class="form">
+	<%= form_with model: @rental, local: true do |f| %>
+		<div class="field">
+			<%= f.label :start_date %>
+			<%= f.date_field :start_date %>
+		</div>
+		<div class="field">
+			<%= f.label :end_date%>
+			<%= f.date_field :end_date %>
+		</div>
+		<div class="field">
+			<%= f.label :customer_id %>
+			<%= f.collection_select :customer_id, @customers, :id, :name %>
+		</div>
+		<div class="field">
+			<%= f.label :car_category_id %>
+			<%= f.collection_select :car_category_id, @car_categories, :id, :name %>
+		</div>
+		<%= f.submit 'Enviar'%>
+	<% end %>
+</div>
