--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Nova locação</h1>
-
 <%= link_to 'Voltar', rentals_path %>
 
-<%= render "form" %>
+<div class="form-session">
+	<h1>Nova locação</h1>
+
+	<%= render "form" %>
+</div>
