--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -16,6 +16,6 @@
 			<%= f.label :email %>
 			<%= f.text_field :email %>
 		</div>
-		<%= f.submit 'Enviar'%>
+		<button class="button-enviar-form" type="submit">Enviar</button>
 	<% end %>
 </div>
