--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,7 +1,7 @@
 <h3 class="link-to-back"><%= link_to 'Voltar', customers_path %></h3>
 
 <div class="form-session">
-	<h1>Editar informações do cliente:</h1>
+	<h1>Editar informações do cliente</h1>
 
 	<%= render "form" %>
 </div>
