--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Voltar', manufacturers_path %>
 
 <div class="form-session">
-	<h1>Registre um novo fabricante:</h1>
+	<h1>Registre um novo fabricante</h1>
 
 	<%= render "form" %>
 </div>
